manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
  namespace: sekai-viewer
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: frontend
  type: ClusterIP
