manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.kubernetes.io/cloudflare-proxied: "true"
  name: frontend
  namespace: sekai-viewer
spec:
  ingressClassName: nginx
  rules:
    - host: "sekai.best"
      http:
        paths:
          - backend:
              service:
                name: frontend
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
      - "sekai.best"
      secretName: sekai-best-tls
